option cc_generic_services = true;
option java_generic_services = true;

package proto.smartidea;

option java_package = "com.baidu.util.sidriver.bo";


message FlowConditionTypeRef {                       
    optional uint32 flow_tag = 1 ;   
};


