package pkg;  

option java_package = "com.baidu.bjf.remoting.protobuf.simplerepeat";
  
option java_outer_classname = "RequrieRepeatedType";  
  
message InterClassName {  
  repeated string list = 1;
}  
  
